--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,8 @@
       "matches": ["https://chat.openai.com/*"],
       "js": ["content.js"]
     }
-  ]
+  ],
+  "action": {
+    "default_popup": "popup.html"
+  }
 }
